# Pico-FreeRTOS-example

./: .gitignore  README.md  build.py  connect_serial.py  requirements.txt  run_docker.py
docker/: Dockerfile
firmware/: CMakeLists.txt
firmware/FreeRTOS-example/: CMakeLists.txt  main.c  main_blinky.c
